--- a/index.html
+++ b/index.html
@@ -7,16 +7,75 @@
     </head>
 
     <body>
-        <header>
-            <h1>E.M.J.C</h1>
-            <nav>
-                <ul>
-                    <li>Home</li>
-                    <li>About Me</li>
-                    <li>Projects</li>
-                    <li>Contact</li>
-                </ul>
-            </nav>
-        </header>
+        <div class="beginning-section">
+            <div class="bars">
+                <div class="outer-bar"></div>
+                <div class="middle-bar"></div>
+                <div class="inner-bar"></div>
+            </div>
+            <div class="section-content">
+                <header>
+                    <h1>EMJC</h1>
+                    <p>Problem solving, writing code, designing app architectures, playing and creating music</p>
+                    <p id="bread-and-butter">Yes, those are my bread and butter.</p>
+                    <nav>
+                        <ul>
+                            <li>
+                                <a href="#about-me">ABOUT ME</a>
+                                <div class="arrow-down"></div>
+                            </li>
+                            <li>
+                                <a href="#">PROJECTS</a>
+                                <div class="arrow-down"></div>
+                            </li>
+                            <li>
+                                <a href="">CONTACT</a>
+                                <div class="arrow-down"></div>
+                            </li>
+                        </ul>
+                    </nav>
+                </header>
+            </div>
+            <div class="bars">
+                <div class="inner-bar"></div>
+                <div class="middle-bar"></div>                
+                <div class="outer-bar"></div>                
+            </div>
+        </div>
+
+        <main>            
+            <div class="middle-section">
+                <div class="bars">
+                    <div class="outer-bar"></div>
+                    <div class="middle-bar"></div>
+                    <div class="inner-bar"></div>
+                </div>
+                <div class="section-content"> 
+                    <div class="section-title">
+                        <p>About Me</p>                        
+                    </div>             
+                    <div class="section-title-underline"></div>      
+                    <div class="about-me">
+                        <h2>I'm ELFIE MARVIN JOHN CAMPIT</h2>
+                        <p>
+                            Hello! I'm an avid enjoyer of creating stuff from software to hardware. Writing code has not only been a "work" thing for me, but a hobby and a way of life as well
+                            with all its endless possibilities to improving daily life. I completed Bachelor of Science in Information Technology at Batangas State University - JPLPC Malvar
+                        </p>
+                        <p>Links to know more about me:</p>
+                        <ul>
+                            <li>Resume</li>
+                            <li>LinkedIn</li>
+                            <li>GitHub</li>
+                            <li>Facebook</li>
+                        </ul>
+                    </div>
+                </div>            
+                <div class="bars">
+                    <div class="inner-bar"></div>
+                    <div class="middle-bar"></div>
+                    <div class="outer-bar"></div>
+                </div>
+            </div>
+        </main>
     </body>
 </html>
