--- a/index.html
+++ b/index.html
@@ -55,20 +55,31 @@
                         <p>About Me</p>                        
                     </div>             
                     <div class="section-title-underline"></div>      
-                    <div class="about-me">
-                        <h2>I'm ELFIE MARVIN JOHN CAMPIT</h2>
-                        <p>
-                            Hello! I'm an avid enjoyer of creating stuff from software to hardware. Writing code has not only been a "work" thing for me, but a hobby and a way of life as well
-                            with all its endless possibilities to improving daily life. I completed Bachelor of Science in Information Technology at Batangas State University - JPLPC Malvar
-                        </p>
-                        <p>Links to know more about me:</p>
-                        <ul>
-                            <li>Resume</li>
-                            <li>LinkedIn</li>
-                            <li>GitHub</li>
-                            <li>Facebook</li>
-                        </ul>
-                    </div>
+                    <div class="about-section">
+                        <div class="about-section-paragraph">
+                            <h2>I'm ELFIE MARVIN JOHN CAMPIT</h2>
+                            <p>
+                                Hello! I'm an avid enjoyer of creating stuff from software to hardware. Writing code has not only been a "work" thing for me, but a hobby and a way of life as well
+                                with all its endless possibilities to improving daily life. I completed Bachelor of Science in Information Technology at Batangas State University - JPLPC Malvar.
+                            </p>
+                            <p>Some links to know more about me:</p>
+                            <ul>
+                                <li>
+                                    <a href="#"><img src="../Portfolio-V1/assets/images/resume.png">Resume</a>
+                                </li>
+                                <li>
+                                    <a href="#"><img src="../Portfolio-V1/assets/images/linkedin.png">LinkedIn</a>
+                                </li>
+                                <li>
+                                    <a href="#"><img src="../Portfolio-V1/assets/images/github.png">GitHub</a>
+                                </li>
+                                <li>
+                                    <a href="#"><img src="../Portfolio-V1/assets/images/facebook.png">Facebook</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <img class="about-section-picture" src="../Portfolio-V1/assets/images/t.jpg">
+                    </div>                   
                 </div>            
                 <div class="bars">
                     <div class="inner-bar"></div>
