Sperated design files

--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link rel="stylesheet" href="./css/main.css">
+        <link rel="stylesheet" href="./css/home.css">
+        <link rel="stylesheet" href="./css/about-me.css">
     </head>
 
     <body>
+
+        <!-- HOME SECTION -->
+
         <div class="beginning-section">
             <div class="bars">
                 <div class="outer-bar"></div>
@@ -42,6 +47,8 @@
                 <div class="outer-bar"></div>                
             </div>
         </div>
+
+        <!-- ABOUT ME SECTION -->
 
         <main>            
             <div class="middle-section">
@@ -80,6 +87,34 @@
                         </div>
                         <img class="about-section-picture" src="../Portfolio-V1/assets/images/t.jpg">
                     </div>                   
+                </div>            
+                <div class="bars">
+                    <div class="inner-bar"></div>
+                    <div class="middle-bar"></div>
+                    <div class="outer-bar"></div>
+                </div>
+            </div>
+
+            <!-- PROJECTS SECTION -->
+
+            <div class="middle-section">
+                <div class="bars">
+                    <div class="outer-bar"></div>
+                    <div class="middle-bar"></div>
+                    <div class="inner-bar"></div>
+                </div>
+                <div class="section-content"> 
+                    <div class="section-title">
+                        <p>Projects</p>                        
+                    </div>             
+                    <div class="section-title-underline"></div>      
+                    <div class="project-section">
+                        <div class="project-tile">
+                            <img class="project-icon" src="">
+                            <p><b>Project Name</b></p>
+                            <p>Brief project overview</p>
+                        </div>                        
+                    </div>
                 </div>            
                 <div class="bars">
                     <div class="inner-bar"></div>
