Refactored existing code to be responsive

--- a/index.html
+++ b/index.html
@@ -12,86 +12,109 @@
 
         <!-- HOME SECTION -->
 
-        <div class="beginning-section">
-            <div class="bars">
-                <div class="outer-bar"></div>
-                <div class="middle-bar"></div>
-                <div class="inner-bar"></div>
+        <header>
+            <div class="home-page">
+                <div class="section-container">
+                    <div class="bar-container">
+                        <div class="bar outer-bar"></div>
+                        <div class="bar middle-bar"></div>
+                        <div class="bar inner-bar"></div>
+                    </div>
+
+                    <div class="section-content-container">
+                        <h1>EMJC</h1>
+                        <p>Problem solving, writing code, designing app architectures, playing and creating music.</p>
+                        <p id="bread-and-butter">Yes, those are my bread and butter.</p>
+                        <nav>
+                            <ul>
+                                <li>                                    
+                                    <a href="#about-me">ABOUT ME</a>
+                                    <div class="arrow-down"></div>
+                                </li>
+                                <li>
+                                    <a href="#">PROJECTS</a>
+                                    <div class="arrow-down"></div>
+                                </li>
+                                <li>
+                                    <a href="">CONTACT</a>
+                                    <div class="arrow-down"></div>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="bar-container">                   
+                        <div class="bar inner-bar"></div>
+                        <div class="bar middle-bar"></div>
+                        <div class="bar outer-bar"></div>                    
+                    </div>
+                </div>
             </div>
-            <div class="section-content">
-                <header>
-                    <h1>EMJC</h1>
-                    <p>Problem solving, writing code, designing app architectures, playing and creating music</p>
-                    <p id="bread-and-butter">Yes, those are my bread and butter.</p>
-                    <nav>
-                        <ul>
-                            <li>
-                                <a href="#about-me">ABOUT ME</a>
-                                <div class="arrow-down"></div>
-                            </li>
-                            <li>
-                                <a href="#">PROJECTS</a>
-                                <div class="arrow-down"></div>
-                            </li>
-                            <li>
-                                <a href="">CONTACT</a>
-                                <div class="arrow-down"></div>
-                            </li>
-                        </ul>
-                    </nav>
-                </header>
-            </div>
-            <div class="bars">
-                <div class="inner-bar"></div>
-                <div class="middle-bar"></div>                
-                <div class="outer-bar"></div>                
-            </div>
-        </div>
+        </header>
 
         <!-- ABOUT ME SECTION -->
 
         <main>            
-            <div class="middle-section">
-                <div class="bars">
-                    <div class="outer-bar"></div>
-                    <div class="middle-bar"></div>
-                    <div class="inner-bar"></div>
-                </div>
-                <div class="section-content"> 
-                    <div class="section-title">
-                        <p>About Me</p>                        
-                    </div>             
-                    <div class="section-title-underline"></div>      
-                    <div class="about-section">
-                        <div class="about-section-paragraph">
-                            <h2>I'm ELFIE MARVIN JOHN CAMPIT</h2>
-                            <p>
+            <div class="about-me">
+                <div class="section-container">
+
+                    <!-- LEFT BAR -->
+
+                    <div class="bar-container">
+                        <div class="bar outer-bar"></div>
+                        <div class="bar middle-bar"></div>
+                        <div class="bar inner-bar"></div>
+                    </div>
+
+                    <!-- SECTION CONTENT -->
+
+                    <div class="section-content-container">
+
+                        <div class="section-title-container">
+                            <p>About Me</p>
+                            <div class="section-title-underline"></div>
+                        </div>
+
+                        <div class="about-grid">
+                            <div class="about-grid-paragraph">
+                                <h2>I'm ELFIE MARVIN JOHN CAMPIT</h2>
+                                <p>
                                 Hello! I'm an avid enjoyer of creating stuff from software to hardware. Writing code has not only been a "work" thing for me, but a hobby and a way of life as well
                                 with all its endless possibilities to improving daily life. I completed Bachelor of Science in Information Technology at Batangas State University - JPLPC Malvar.
-                            </p>
-                            <p>Some links to know more about me:</p>
-                            <ul>
-                                <li>
-                                    <a href="#"><img src="../Portfolio-V1/assets/images/resume.png">Resume</a>
-                                </li>
-                                <li>
-                                    <a href="#"><img src="../Portfolio-V1/assets/images/linkedin.png">LinkedIn</a>
-                                </li>
-                                <li>
-                                    <a href="#"><img src="../Portfolio-V1/assets/images/github.png">GitHub</a>
-                                </li>
-                                <li>
-                                    <a href="#"><img src="../Portfolio-V1/assets/images/facebook.png">Facebook</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <img class="about-section-picture" src="../Portfolio-V1/assets/images/t.jpg">
-                    </div>                   
-                </div>            
-                <div class="bars">
-                    <div class="inner-bar"></div>
-                    <div class="middle-bar"></div>
-                    <div class="outer-bar"></div>
+                                </p>
+                            </div>
+                            
+                            <div class="about-grid-links"></div>
+                                <p>Some links to know more about me:</p>
+                                <ul>
+                                    <li>
+                                        <a href="#"><img src="../Portfolio-V1/assets/images/resume.png">Resume</a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><img src="../Portfolio-V1/assets/images/linkedin.png">LinkedIn</a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><img src="../Portfolio-V1/assets/images/github.png">GitHub</a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><img src="../Portfolio-V1/assets/images/facebook.png">Facebook</a>
+                                    </li>
+                                </ul>
+                            </div>
+
+                            <div class="about-grid-picture">
+                                <img src="./assets/images/t.jpg" width="200px" height="200px">    
+                            </div>                            
+                        </div>    
+                    </div>
+
+                     <!-- RIGHT BAR -->
+
+                     <div class="bar-container">
+                        <div class="bar outer-bar"></div>
+                        <div class="bar middle-bar"></div>
+                        <div class="bar inner-bar"></div>
+                    </div>
+
                 </div>
             </div>
 
