Fixed About Me section layout and added Projects section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="./css/main.css">
         <link rel="stylesheet" href="./css/home.css">
         <link rel="stylesheet" href="./css/about-me.css">
+        <link rel="stylesheet" href="./css/projects.css">
     </head>
 
     <body>
@@ -81,9 +82,7 @@
                                 Hello! I'm an avid enjoyer of creating stuff from software to hardware. Writing code has not only been a "work" thing for me, but a hobby and a way of life as well
                                 with all its endless possibilities to improving daily life. I completed Bachelor of Science in Information Technology at Batangas State University - JPLPC Malvar.
                                 </p>
-                            </div>
-                            
-                            <div class="about-grid-links"></div>
+
                                 <p>Some links to know more about me:</p>
                                 <ul>
                                     <li>
@@ -99,10 +98,10 @@
                                         <a href="#"><img src="../Portfolio-V1/assets/images/facebook.png">Facebook</a>
                                     </li>
                                 </ul>
-                            </div>
+                            </div>                        
 
                             <div class="about-grid-picture">
-                                <img src="./assets/images/t.jpg" width="200px" height="200px">    
+                                <img src="./assets/images/t.jpg" alt="A picture of me">    
                             </div>                            
                         </div>    
                     </div>
@@ -110,9 +109,9 @@
                      <!-- RIGHT BAR -->
 
                      <div class="bar-container">
-                        <div class="bar outer-bar"></div>
-                        <div class="bar middle-bar"></div>
                         <div class="bar inner-bar"></div>
+                        <div class="bar middle-bar"></div>                        
+                        <div class="bar outer-bar"></div>                        
                     </div>
 
                 </div>
@@ -120,29 +119,59 @@
 
             <!-- PROJECTS SECTION -->
 
-            <div class="middle-section">
-                <div class="bars">
-                    <div class="outer-bar"></div>
-                    <div class="middle-bar"></div>
-                    <div class="inner-bar"></div>
-                </div>
-                <div class="section-content"> 
-                    <div class="section-title">
-                        <p>Projects</p>                        
-                    </div>             
-                    <div class="section-title-underline"></div>      
-                    <div class="project-section">
-                        <div class="project-tile">
-                            <img class="project-icon" src="">
-                            <p><b>Project Name</b></p>
-                            <p>Brief project overview</p>
-                        </div>                        
+            <div class="projects">
+                <div class="section-container">
+
+                    <!-- LEFT BAR -->
+
+                    <div class="bar-container">
+                        <div class="bar outer-bar"></div>
+                        <div class="bar middle-bar"></div>
+                        <div class="bar inner-bar"></div>
                     </div>
-                </div>            
-                <div class="bars">
-                    <div class="inner-bar"></div>
-                    <div class="middle-bar"></div>
-                    <div class="outer-bar"></div>
+
+                    <!-- SECTION CONTENT -->
+
+                    <div class="section-content-container">
+
+                        <div class="section-title-container">
+                            <p>Projects</p>
+                            <div class="section-title-underline"></div>
+                        </div>
+
+                        <div class="project-grid">
+                            <div class="project-grid-tile">
+                                <div class="project-image-space">
+                                    <img src="./assets/images/project_sample_1.png" alt="Project Logo">
+                                </div>
+                                <h3>Project Name</h3>
+                                <p>Project Description</p>
+                            </div>      
+                            <div class="project-grid-tile">
+                                <div class="project-image-space">
+                                    <img src="./assets/images/project_sample_2.png" alt="Project Logo">
+                                </div>
+                                <h3>Project Name</h3>
+                                <p>Project Description</p>
+                            </div>
+                            <div class="project-grid-tile">
+                                <div class="project-image-space">
+                                    <img src="./assets/images/project_sample_1.png" alt="Project Logo">
+                                </div>
+                                <h3>Project Name</h3>
+                                <p>Project Description</p>
+                            </div>         
+                        </div>
+                    </div>
+
+                     <!-- RIGHT BAR -->
+
+                     <div class="bar-container">
+                        <div class="bar inner-bar"></div>
+                        <div class="bar middle-bar"></div>                        
+                        <div class="bar outer-bar"></div>                        
+                    </div>
+
                 </div>
             </div>
         </main>
