added contact section

--- a/index.html
+++ b/index.html
@@ -174,6 +174,38 @@
 
                 </div>
             </div>
+
+            <!-- CONTACT SECTION -->
+            <div class="contact">
+                <div class="section-container">
+
+                    <!-- LEFT BAR -->
+
+                    <div class="bar-container">
+                        <div class="bar outer-bar"></div>
+                        <div class="bar middle-bar"></div>
+                        <div class="bar inner-bar"></div>
+                    </div>
+
+                    <!-- SECTION CONTENT -->
+
+                     <div class="section-content-container">
+                        <div class="section-title-container">
+                            <p>Let's Chat!</p>
+                            <div class="section-title-underline"></div>
+                        </div>
+                     </div>
+
+                    <!-- RIGHT BAR -->
+
+                    <div class="bar-container">
+                        <div class="bar inner-bar"></div>
+                        <div class="bar middle-bar"></div>                        
+                        <div class="bar outer-bar"></div>                        
+                    </div>
+
+                </div>
+            </div>
         </main>
     </body>
 </html>
