Added Contact section design

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="./css/home.css">
         <link rel="stylesheet" href="./css/about-me.css">
         <link rel="stylesheet" href="./css/projects.css">
+        <link rel="stylesheet" href="./css/contact.css">
     </head>
 
     <body>
@@ -92,7 +93,7 @@
                                         <a href="#"><img src="../Portfolio-V1/assets/images/linkedin.png">LinkedIn</a>
                                     </li>
                                     <li>
-                                        <a href="#"><img src="../Portfolio-V1/assets/images/github.png">GitHub</a>
+                                        <a href="https://github.com/KarmotrineOverflow"><img src="../Portfolio-V1/assets/images/github.png">GitHub</a>
                                     </li>
                                     <li>
                                         <a href="#"><img src="../Portfolio-V1/assets/images/facebook.png">Facebook</a>
@@ -194,7 +195,35 @@
                             <p>Let's Chat!</p>
                             <div class="section-title-underline"></div>
                         </div>
-                     </div>
+
+                        <div class="contact-grid">
+                            <div class="contact-form">
+                                <form>
+                                    <label for="name">Name</label>
+                                    <input class="text-field" type="text" id="name">
+
+                                    <label for="email">Email</label>
+                                    <input class="text-field" type="email" id="email" required>
+
+                                    <label for="subject">Subject</label>
+                                    <input class="text-field" type="text" id="subject">
+
+                                    <label for="body">Body</label>
+                                    <textarea class="text-field" id="body" name="body" rows="20" cols="50" placeholder="What's on your mind?"></textarea>
+                                </form>
+                            </div>
+
+                            <div class="availability">
+                                <p id="status-header">YES!</p>
+                                <p id="status-statement">I am available for work.</p>
+                                <div class="availability-status">
+                                    <p>Availability Status:</p>
+                                    <p id="status"><b>AVAILABLE</b></p>
+                                    <img src="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
                     <!-- RIGHT BAR -->
 
