--- a/index.html
+++ b/index.html
@@ -87,16 +87,16 @@
                                 <p>Some links to know more about me:</p>
                                 <ul>
                                     <li>
-                                        <a href="#"><img src="../Portfolio-V1/assets/images/resume.png">Resume</a>
+                                        <a href="#"><img src="./assets/images/resume.png">Resume</a>
                                     </li>
                                     <li>
-                                        <a href="#"><img src="../Portfolio-V1/assets/images/linkedin.png">LinkedIn</a>
+                                        <a href="#"><img src="./assets/images/linkedin.png">LinkedIn</a>
                                     </li>
                                     <li>
-                                        <a href="https://github.com/KarmotrineOverflow"><img src="../Portfolio-V1/assets/images/github.png">GitHub</a>
+                                        <a href="https://github.com/KarmotrineOverflow"><img src=".//assets/images/github.png">GitHub</a>
                                     </li>
                                     <li>
-                                        <a href="#"><img src="../Portfolio-V1/assets/images/facebook.png">Facebook</a>
+                                        <a href="#"><img src="./assets/images/facebook.png">Facebook</a>
                                     </li>
                                 </ul>
                             </div>                        
@@ -197,6 +197,17 @@
                         </div>
 
                         <div class="contact-grid">
+
+                            <div class="availability">
+                                <p id="status-header">YES!</p>
+                                <p id="status-statement">I am available for work.</p>
+                                <div class="availability-status">
+                                    <p>Availability Status:</p>
+                                    <p id="status"><b>AVAILABLE</b></p>
+                                    <img src="">
+                                </div>
+                            </div>
+
                             <div class="contact-form">
                                 <form>
                                     <label for="name">Name</label>
@@ -212,16 +223,7 @@
                                     <textarea class="text-field" id="body" name="body" rows="20" cols="50" placeholder="What's on your mind?"></textarea>
                                 </form>
                             </div>
-
-                            <div class="availability">
-                                <p id="status-header">YES!</p>
-                                <p id="status-statement">I am available for work.</p>
-                                <div class="availability-status">
-                                    <p>Availability Status:</p>
-                                    <p id="status"><b>AVAILABLE</b></p>
-                                    <img src="">
-                                </div>
-                            </div>
+                            
                         </div>
                     </div>
 
