Added submit button to contact form

--- a/index.html
+++ b/index.html
@@ -221,6 +221,8 @@
 
                                     <label for="body">Body</label>
                                     <textarea class="text-field" id="body" name="body" rows="20" cols="50" placeholder="What's on your mind?"></textarea>
+
+                                    <input id="submit-btn" type="submit" value="Submit">
                                 </form>
                             </div>
                             
