--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                                         <a href="#"><img src="./assets/images/linkedin.png">LinkedIn</a>
                                     </li>
                                     <li>
-                                        <a href="https://github.com/KarmotrineOverflow"><img src=".//assets/images/github.png">GitHub</a>
+                                        <a href="https://github.com/KarmotrineOverflow"><img src="./assets/images/github.png">GitHub</a>
                                     </li>
                                     <li>
                                         <a href="#"><img src="./assets/images/facebook.png">Facebook</a>
