Added availability color signal

--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
                                 <div class="availability-status">
                                     <p>Availability Status:</p>
                                     <p id="status"><b>AVAILABLE</b></p>
+                                    <div id="availability-signal"></div>
                                     <img src="">
                                 </div>
                             </div>
