Changed website color palette, fixed contact section responsiveness (kinda), and added project tile hover animation

--- a/index.html
+++ b/index.html
@@ -145,23 +145,30 @@
                                 <div class="project-image-space">
                                     <img src="./assets/images/project_sample_1.png" alt="Project Logo">
                                 </div>
-                                <h3>Project Name</h3>
-                                <p>Project Description</p>
+                                <h3>SerbisyoNow</h3>
+                                <p>A C2C crowdsourcing app for quick, contractless jobs</p>
                             </div>      
                             <div class="project-grid-tile">
                                 <div class="project-image-space">
                                     <img src="./assets/images/project_sample_2.png" alt="Project Logo">
                                 </div>
-                                <h3>Project Name</h3>
-                                <p>Project Description</p>
+                                <h3>RoamSafe</h3>
+                                <p>Smart, multipurpose pet tracking app</p>
                             </div>
                             <div class="project-grid-tile">
                                 <div class="project-image-space">
                                     <img src="./assets/images/project_sample_1.png" alt="Project Logo">
                                 </div>
-                                <h3>Project Name</h3>
-                                <p>Project Description</p>
-                            </div>         
+                                <h3>StockWatch</h3>
+                                <p>Lightweight stock watchlist widget with AI capabilities</p>
+                            </div>     
+                            <div class="project-grid-tile">
+                                <div class="project-image-space">
+                                    <img src="./assets/images/project_sample_2.png" alt="Project Logo">
+                                </div>
+                                <h3>TalkativeAI</h3>
+                                <p>Customizable, AI-powered messaging app for handling client messages</p>
+                            </div>             
                         </div>
                     </div>
 
@@ -211,19 +218,19 @@
 
                             <div class="contact-form">
                                 <form>
-                                    <label for="name">Name</label>
+                                    <label class="form-label" for="name">Name</label>
                                     <input class="text-field" type="text" id="name">
 
-                                    <label for="email">Email</label>
+                                    <label class="form-label" for="email">Email</label>
                                     <input class="text-field" type="email" id="email" required>
 
-                                    <label for="subject">Subject</label>
+                                    <label class="form-label" for="subject">Subject</label>
                                     <input class="text-field" type="text" id="subject">
 
-                                    <label for="body">Body</label>
-                                    <textarea class="text-field" id="body" name="body" rows="20" cols="50" placeholder="What's on your mind?"></textarea>
+                                    <label class="form-label" for="body">Body</label>
+                                    <textarea class="text-field text-area" id="body" name="body" rows="20" cols="50" placeholder="What's on your mind?"></textarea>
 
-                                    <input id="submit-btn" type="submit" value="Submit">
+                                    <input class="form-label" id="submit-btn" type="submit" value="Submit">
                                 </form>
                             </div>
                             
