--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <link rel="stylesheet" href="./css/about-me.css">
         <link rel="stylesheet" href="./css/projects.css">
         <link rel="stylesheet" href="./css/contact.css">
+        <link rel="stylesheet" href="./css/modal.css">
+
+        <script src="./scripts/modal.js"></script>
     </head>
 
     <body>
@@ -140,35 +143,39 @@
                             <div class="section-title-underline"></div>
                         </div>
 
+                        <dialog class="modal" id="modal">
+                            <div class="modal-view">Hi</div>
+                        </dialog>
+
                         <div class="project-grid">
-                            <div class="project-grid-tile">
+                            <button class="project-grid-tile">
                                 <div class="project-image-space">
                                     <img src="./assets/images/project_sample_1.png" alt="Project Logo">
                                 </div>
                                 <h3>SerbisyoNow</h3>
                                 <p>A C2C crowdsourcing app for quick, contractless jobs</p>
-                            </div>      
-                            <div class="project-grid-tile">
+                            </button>      
+                            <button class="project-grid-tile">
                                 <div class="project-image-space">
                                     <img src="./assets/images/project_sample_2.png" alt="Project Logo">
                                 </div>
                                 <h3>RoamSafe</h3>
                                 <p>Smart, multipurpose pet tracking app</p>
-                            </div>
-                            <div class="project-grid-tile">
+                            </button>
+                            <button class="project-grid-tile">
                                 <div class="project-image-space">
                                     <img src="./assets/images/project_sample_1.png" alt="Project Logo">
                                 </div>
                                 <h3>StockWatch</h3>
                                 <p>Lightweight stock watchlist widget with AI capabilities</p>
-                            </div>     
-                            <div class="project-grid-tile">
+                            </button>     
+                            <button class="project-grid-tile">
                                 <div class="project-image-space">
                                     <img src="./assets/images/project_sample_2.png" alt="Project Logo">
                                 </div>
                                 <h3>TalkativeAI</h3>
                                 <p>Customizable, AI-powered messaging app for handling client messages</p>
-                            </div>             
+                            </button>             
                         </div>
                     </div>
 
