Fixed contact form design responsiveness

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                                     <input class="text-field" type="text" id="subject">
 
                                     <label class="form-label" for="body">Body</label>
-                                    <textarea class="text-field text-area" id="body" name="body" rows="20" cols="50" placeholder="What's on your mind?"></textarea>
+                                    <textarea class="text-field text-area" id="body" name="body" placeholder="What's on your mind?"></textarea>
 
                                     <input class="form-label" id="submit-btn" type="submit" value="Submit">
                                 </form>
