Added link functionality for jumping to sections

--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
                         <nav>
                             <ul>
                                 <li>                                    
-                                    <a href="#about-me">ABOUT ME</a>
+                                    <a href="#about-me-section">ABOUT ME</a>
                                     <div class="arrow-down"></div>
                                 </li>
                                 <li>
-                                    <a href="#">PROJECTS</a>
+                                    <a href="#projects-section">PROJECTS</a>
                                     <div class="arrow-down"></div>
                                 </li>
                                 <li>
-                                    <a href="">CONTACT</a>
+                                    <a href="#contact-section">CONTACT</a>
                                     <div class="arrow-down"></div>
                                 </li>
                             </ul>
@@ -59,7 +59,7 @@
         <!-- ABOUT ME SECTION -->
 
         <main>            
-            <div class="about-me">
+            <div class="about-me" id="about-me-section">
                 <div class="section-container">
 
                     <!-- LEFT BAR -->
@@ -123,7 +123,7 @@
 
             <!-- PROJECTS SECTION -->
 
-            <div class="projects">
+            <div class="projects" id="projects-section">
                 <div class="section-container">
 
                     <!-- LEFT BAR -->
@@ -217,7 +217,7 @@
             </div>
 
             <!-- CONTACT SECTION -->
-            <div class="contact">
+            <div class="contact" id="contact-section">
                 <div class="section-container">
 
                     <!-- LEFT BAR -->
