Replaced placeholder picture

--- a/index.html
+++ b/index.html
@@ -93,19 +93,19 @@
                                         <a href="#"><img src="./assets/images/resume.png">Resume</a>
                                     </li>
                                     <li>
-                                        <a href="#"><img src="./assets/images/linkedin.png">LinkedIn</a>
+                                        <a href="https://www.linkedin.com/in/elfie-marvin-john-campit-b3b85a280/"><img src="./assets/images/linkedin.png">LinkedIn</a>
                                     </li>
                                     <li>
                                         <a href="https://github.com/KarmotrineOverflow"><img src="./assets/images/github.png">GitHub</a>
                                     </li>
                                     <li>
-                                        <a href="#"><img src="./assets/images/facebook.png">Facebook</a>
+                                        <a href="https://www.facebook.com/karmotrineOvrflw/"><img src="./assets/images/facebook.png">Facebook</a>
                                     </li>
                                 </ul>
                             </div>                        
 
                             <div class="about-grid-picture">
-                                <img src="./assets/images/t.jpg" alt="A picture of me">    
+                                <img src="./assets/images/me.jpg" alt="A picture of me">    
                             </div>                            
                         </div>    
                     </div>
